2005-01-20  Carl Worth  <cworth@pippin.local>

	* src/cairo-atsui.h: Created new public header cairo-atsui.h.

	Build fixes for Quartz backend courtesy of
	Geoff Norton <gnorton@customerdna.com>:

	* configure.in: Fix check for atsui font backend.

	* src/Makefile.am: Add conditional compilation for
	cairo_atsui_font.c and cairo_ft_font.c.

	* src/cairo_quartz_surface.c: Add missing include of
	cairo-quartz.h.

	* src/cairo-quartz.h: Add include of Carbon/Carbon.h.

	* src/cairo-features.h.in: Advertise availability of Quartz
	surface.
	
	* src/Makefile.am: Install cairo-quartz.h, and conditionally
	compile cairo_quartz_surface.c.

	* configure.in: Add autofoo checks to detect quartz
	backend.

2005-01-20  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Track various renamings.

	* src/cairo_xlib_surface.c: 
	* src/cairo_ps_surface.c: 
	* src/cairo_png_surface.c: 
	* src/cairo_pdf_surface.c: 
	* src/cairo_glitz_surface.c: 
	* src/cairo_ft_font.c: Insert new includes for backend-specific
	header files.

	* src/cairo_gdip_surface.cpp: 
	* src/cairo_gdip_font.cpp: Remove redundant include of
	cairo-features.h.

	* src/cairo.h (CAIRO_H): Rename header-exclusion macro from
	_CAIRO_H_ to CAIRO_H.
	Remove platform-specific grubbing for cairo-features.h and
	pixman.h in odd places.

	Remove all backend-specific prototypes, (as they are now in their
	own header files).

	Remove deprecated

	* src/cairo.c (cairo_sane_state): Remove printf.

	* src/cairo-features.h.in: Convert to utf-8. Use the proper name
	for multiple-header exclusion (CAIRO_FEATURES_H). Track rename of
	FREETYPE_FONT_FEATURE to FT_FONT_FEATURE.

	* src/Makefile.am (cairoinclude_HEADERS): Split cairo.h up into
	cairo.h, cairo-ft.h, cairo-glitz.h, cairo-pdf.h, cairo-png.h,
	cairo-ps.h, cairo-xcb.h, cairo-xlib.h.
	Update for rename of cairo_wideint.h to cairo-wideint.h.

	* configure.in: Rename CAIRO_HAS_FREETYPE_FONT to
	CAIRO_HAS_FT_FONT, (to match cairo_ft_font functions and
	cairo-ft.h).
