@@ -23,8 +23,12 @@
  * Author: Carl D. Worth <cworth@cworth.org>
  */
 
+#include <stdio.h>
+#include <stdlib.h>
+#include <stdarg.h>
 #include <unistd.h>
 #include <errno.h>
+#include <string.h>
 
 #include "cairo_test.h"
 
